src/test/pass/if_while.j
class Main {
    Void main() {
        Int i;

        if (i == 1) {
            println("if true");
        } else {
            println("if false");
        }

        while (i == 1) {
            println("while true");
        }
        println("end while");

        return;
    }
}
