src/test/fail/e.j
class Main {

Void main(Int i, Int a, Int b,Int d){

   while(true){

      b = 340 ;

      t1 = t2 ;
   }
}

}


class Dummy {
   Dummy j;

   Int dummy() {

      Bool i;

      Bool j;

      return i ;
   }
}
